--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -48,6 +48,7 @@
     "pretty-quick": "^3.1.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "uuid": "^8.3.2",
     "vue-template-compiler": "^2.6.11"
   },
   "gitHooks": {
